[Fix] SidebarPanel layout issue in iOS.

--- a/src/assets/scss/utils/mixins.scss
+++ b/src/assets/scss/utils/mixins.scss
@@ -63,7 +63,9 @@
     }
   }
   @include safariOnly {
-    padding-right: 0;
+    @supports not (-webkit-touch-callout: none) { // Only for not safari mobile, https://stackoverflow.com/a/47818418
+      padding-right: 0;
+    }
   }
 }
 
